--- a/src/components/hero/hero.component.scss
+++ b/src/components/hero/hero.component.scss
@@ -18,7 +18,17 @@
     }
 
     & .title {
-        font-size: 46px;
+        font-size: 62px;
+        margin-bottom: 0;
+    }
+
+    & .subtitle {
+        margin:0 0 30px;
+    }
+
+    & .body {
+        width: 470px;
+        font-size: 15px;
     }
 
     &__scroll-link {
@@ -27,6 +37,7 @@
         cursor: pointer;
         padding: 10px 20px 10px 0;
         margin-top: 25px;
+        width: 90px;
 
         @include breakpoint($breakpoint-desktop) {
         margin-top: 10px;
