--- a/src/components/halfBanner/HalfBanner.component.scss
+++ b/src/components/halfBanner/HalfBanner.component.scss
@@ -1,21 +1,43 @@
+@import "../../App.scss";
+
 .full-banner {
     display: flex;
-    margin: 0 20px;
+    margin: 30px 20px;
 }
 
 .half-banner {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    flex-direction: column;
+    width: 100%;
+    height: 70%;
+    align-self: center;
+    background: $color-white;
+
+    &__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        max-width: 70%;
+    }
 
     &--right {
+        opacity: 0.8;
         order: 2;
+        margin-left: -80px;
+    }
+
+    &--left {
+        opacity: 0.8;
+        margin-right: -80px;
     }
 
     img {
         width: 100%;
-        height: 300px;
+        height: 380px;
         object-fit: cover;
+        box-shadow: 7px 5px 38px black;
     }
 }
