--- a/src/components/whatWeDo/WhatWeDo.component.scss
+++ b/src/components/whatWeDo/WhatWeDo.component.scss
@@ -13,4 +13,12 @@
         margin: 40px 0;
     }
 }
-    
+
+@include breakpoint($breakpoint-mobile-max) {
+    .what-we-do {
+        padding-bottom: 50px;
+        h2 {
+            margin-bottom: -25px;
+        }
+    }
+}
