add mobile styles for what we do component and update content

--- a/src/components/contact-component/ContactComponent.component.scss
+++ b/src/components/contact-component/ContactComponent.component.scss
@@ -41,3 +41,12 @@
         border-bottom: 1px solid $color-white;
     }
 }
+
+@include breakpoint($breakpoint-mobile-max) {
+    .contact .container .content {
+        flex-direction: column;
+    }
+    .contact .container .content--half {
+        width: 100%;
+    }
+}
