--- a/src/components/half-banner/HalfBanner.component.scss
+++ b/src/components/half-banner/HalfBanner.component.scss
@@ -60,6 +60,7 @@
     .full-banner {
         margin: 0 20px -50px 20px;
         position: relative;
+        min-height: 350px;
     }
 
     .half-banner {
