remove blue background on menu button tap

--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -80,5 +80,7 @@
 }
 
 @include breakpoint($breakpoint-desktop) {
-    .header .links .link {display: initial; }
+    .header .links .link {
+        display: initial; 
+    }
 }
