--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,12 @@
     margin: auto;
     justify-content: center;
 }
+
+input,
+div,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
