--- a/src/components/image-card/ImageCard.component.scss
+++ b/src/components/image-card/ImageCard.component.scss
@@ -13,17 +13,54 @@
     &__included {
         list-style: none;
         padding-inline-start: 0;
+        display: flex;
+    }
+    &__title {
+        margin-top: 0;
     }
     &__included {
-        
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        li {
+            min-width: 50%;
+            display: flex;
+            align-items: center;
+
+            svg {
+                margin-right: 5px;
+            }
+        }
     }
     &__brands {
-        display: flex;
-       li {
-           margin-right: 15px;
-       }
+        margin-top: 7px;
+    }
+    &__brand {
+        height: 30px;
+        margin-right: 10px;
     }
     &__image {
         max-width: 100%;
+        transition: transform 2s;
+        &-container {
+            height: 250px;
+            display: flex;
+            align-items: center;
+        }
+    }
+    &:hover {
+        .card__image {
+            transform: scale(1.1);
+        }
+    }
+}
+
+@include breakpoint($breakpoint-mobile-max) {
+    
+    .card {
+        margin: 10px 25px;
+        &__image-container {
+            height: 150px;
+        }
     }
 }
