--- a/src/components/our-fleet/OurFleet.component.scss
+++ b/src/components/our-fleet/OurFleet.component.scss
@@ -1,6 +1,11 @@
 .our-fleet {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 40px 0;
+    h2 {
+        text-align: center;
+    }
+    &__container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding-bottom: 40px;
+    }
 }
