--- a/src/components/hero/hero.component.scss
+++ b/src/components/hero/hero.component.scss
@@ -5,9 +5,16 @@
     $this: &;
 
     height: 90vh;
-    background-color: $color-black;
+    background-color: rgba(0,0,0,0.85);
     color: $color-white;
-
+    
+    video {
+        object-fit: cover;
+        width: 100%;
+        height: 90vh;
+        z-index: -1;
+        position: absolute;
+    }
     & .container {
         display: flex;
         flex-direction: column;
