--- a/src/components/half-banner/HalfBanner.component.scss
+++ b/src/components/half-banner/HalfBanner.component.scss
@@ -23,9 +23,8 @@
     width: 100%;
     height: 70%;
     align-self: center;
-    background: $color-white;
     transition: all 0.6s ease-in;
-
+    
     &__container {
         display: flex;
         align-items: center;
@@ -33,9 +32,10 @@
         flex-direction: column;
         max-width: 70%;
     }
-
+    
     &--right,
     &--left {
+        background: $color-white;
         z-index: 2;
         opacity: 0.8;
     }
@@ -58,16 +58,18 @@
 }
 @include breakpoint($breakpoint-mobile-max) {
     .full-banner {
-        margin: 0 20px -50px 20px;
+        margin: 0 20px 0px 20px;
         position: relative;
         min-height: 350px;
     }
 
     .half-banner {
+        height: 300px;
         &--right,
         &--left {
             position: absolute;
             margin-left: 0;
+
         }
     }
 }
